# rust-gitq

./: Cargo.toml  Makefile  README.md  flake.nix  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.tsx  graphql.ts  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  graphql.rs  main.rs
src/components/: BranchCompare.tsx  BranchSelect.tsx  CommitHistory.tsx  DiffViewer.tsx  DirBrowser.tsx  FileTree.tsx  FileViewer.tsx  Header.tsx
src/lib/: lang.ts
