[package]
name = "gitq"
version = "0.1.0"
edition = "2024"
description = "A modern cgit — browse local git repositories with a GitHub-like UI"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
async-graphql = "7"
tokio = { version = "1", features = ["sync"] }
futures = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
